src/components/Readmode.css
.control-btn {
  width: 100%;
  margin-top: 10px;
  text-align: center;
}

.success {
  float: "right";
}

.previousPageButton {
  border: none;
  background-color: transparent;
  cursor: pointer;
}
.userInfoContainer {
  background-color: #fff;
  box-shadow: 4px -4px 8px rgba(54, 63, 78, 0.1),
    -4px 4px 8px rgba(54, 63, 78, 0.1);
  border-radius: 10px;
  padding: 24px 12px;
  display: flex;
  flex-direction: column;
  align-items: center;
}
.userRecordSection {
  background-color: #fff;
  box-shadow: 4px -4px 8px rgba(54, 63, 78, 0.1),
    -4px 4px 8px rgba(54, 63, 78, 0.1);
  padding: 24px 12px;
  border-radius: 10px;
  display: flex;
  flex-direction: column;
}

@media (min-width: 600px) {
  .userInfoContainer, .userRecordSection {
    height: 60vh;
  }
}
.userInfo {
  width: 90%;
  height: 64px;
  display: flex;
  align-items: center;
  gap: 1rem;
}
.userInfoMode {
  width: 90%;
}
.userInfoMode > div {
  width: 100%;
}
.userInfoMode,
.userInfoMode > div {
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: flex-start;
}
.userInfoLockNumber {
  width: 90%;
  height: 30px;
  margin: 30px 0 15px 0;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 15px;
}

.userInfoLockNumber h1 {
  font-weight: 700;
  font-size: 25px;
  line-height: 30px;
  font-style: bold;
  color: #363f4e;
}
.userInfoLockNumber > img {
  margin: 3px 0;
}
.userInfo h1 {
  font-weight: 700;
  font-size: 25px;
  line-height: 30px;
  font-style: bold;
  color: #363f4e;
  margin: 0 0 0 15px;
}
.userInfo .detail {
  overflow: hidden;
  padding: 0.5em;
  text-overflow: ellipsis;
  font-weight: 400;
}
.userInfo p {
  margin-top: 0;
}
.userInfoLockState {
  width: 90%;
  margin: 0 0 40px 0;
}
.userRecordTitle {
  color: #363f4e;
  font-weight: 400;
  font-size: 24px;
  display: flex;
  align-items: center;
  padding: 30px 58px 20px 58px;
}
.userRecord {
  padding: 18px 58px 0 58px;
  max-height: 80%;
  overflow-y: scroll;
}
.diacontent {
  margin: 10px 0;
}
#alert-dialog-title {
  line-height: 1;
}
.alert img {
  margin: 30px 0 8px 0;
}
.alert p {
  padding: 10px;
  font-weight: 400;
  font-size: 16px;
}
.userDelete {
  text-align: right;
  flex-grow: 1;
}

